--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,6 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
-
 * {
   margin: 0;
   padding: 0;
@@ -17,43 +16,49 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+/* .container {
+  @apply max-w-screen-2xl mx-auto lg:py-12 py-7 px-4 sm:px-6 md:px-8 lg:px-16 xl:px-24;
+} */
+
+.container {
+  @apply max-w-screen-2xl mx-auto sm:px-6 md:px-8 lg:px-16 xl:px-24;
+}
+
 @layer base {
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-      @apply font-bold;
-    }
-  
-    h1 {
-      @apply text-5xl;
-    }
-  
-    h2 {
-      @apply text-4xl;
-    }
-  
-    h3 {
-      @apply text-[22px];
-    }
-  
-    h4 {
-      @apply text-xl;
-    }
-  
-    h5 {
-      @apply text-[18px];
-    }
-  
-    h6 {
-      @apply text-sm;
-    }
-  
-    strong {
-      @apply font-bold text-xs;
-    }
-  
-   
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-bold;
   }
+
+  h1 {
+    @apply text-5xl;
+  }
+
+  h2 {
+    @apply text-4xl;
+  }
+
+  h3 {
+    @apply text-[22px];
+  }
+
+  h4 {
+    @apply text-xl;
+  }
+
+  h5 {
+    @apply text-lg;
+  }
+
+  h6 {
+    @apply text-sm;
+  }
+
+  strong {
+    @apply font-bold text-xs;
+  }
+}
