--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
 } */
 
 .container {
-  @apply max-w-screen-2xl mx-auto sm:px-6 md:px-8 lg:px-16 xl:px-24;
+  @apply max-w-screen-2xl mx-auto px-6 md:px-8 lg:px-16 xl:px-24;
 }
 
 @layer base {
